# lweb-api

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
config/: app.config.jsonc  dev.config.jsonc
migration/LWEB/: README.md
migration/LWEB/src/: lib.rs  m20250712_000001.rs
src/: config.rs  main.rs
src/controllers/: user_controller.rs
src/database/: init_db.rs  mod.rs
src/middlewares/: logging.rs
src/models/: app.rs  app_config.rs  config.rs
src/routes/: mod.rs  user.rs
src/services/: user_service.rs
src/utils/: log.rs
