[package]
name = "lweb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.140"
jsonc-parser = { version = "0.26.2", features = ["serde"] } 

#数据库
sea-orm = "1.1.12"

#工具
colored = "*"
once_cell = "1"
chrono = "0.4"
strip-ansi-escapes = "0.1"
